ntl-10.3.0/src/CheckFeature.log
*** CheckFeature log ***
g++ -I../include -I. -march=native -g2 -o TestGetTime TestGetTime.cpp GetTime1.cpp -lm
running
g++ -I../include -I. -march=native -g2 -o TestGetPID TestGetPID.cpp GetPID1.cpp -lm
g++ -I../include -I. -march=native -g2 -o CheckFeature CheckCLZL.cpp CheckCLZLAux.cpp -lm
g++ -I../include -I. -march=native -g2 -o CheckFeature CheckLL.cpp CheckLLAux.cpp -lm
g++ -I../include -I. -march=native -g2 -o CheckFeature CheckAVX.cpp -lm
g++ -I../include -I. -march=native -g2 -o CheckFeature CheckFMA.cpp -lm
CheckFMA.cpp:10:2: error: #error "AVX2 with FMA not supported"
 #error "AVX2 with FMA not supported"
  ^
g++ -I../include -I. -march=native -g2 -o CheckFeature CheckPCLMUL.cpp -lm
